--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,126 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  /*Brand colors*/
+  --White-bk: #ffffff;
+  --Eerie-black: #1D1D1D;
+  --Platinum: #E5E4E0;
+  --Mikado-yellow: #FAC014;
+  --Keppel: #03C5AD;
+  --Caribbean-current: #00798C;
+  --Persian-red: #D63230;
+  /*Button*/
+  --Round: 16px;
+  --btn-s-h: 32px;
+  --btn-m-h: 40px;
+  --btn-b-h: 56px;
+  /*Text*/
+  --Main-title-mx: 6rem;
+  --Main-subtitle-mx: 4rem;
+  --Subtitle-mx: 2rem;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: none;
+  font-style: normal;
+  font-size: 1.5rem;
+  list-style: none;
+  text-decoration: none;
 }
-a:hover {
-  color: #535bf2;
+
+html {
+  scrollbar-gutter: stable;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  background-color: var(--White-bk);
 }
+
+/* Scrollbar */
+body::-webkit-scrollbar {
+  width: 7px;
+  background: var(--Platinum);
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-color: var(--Caribbean-current);
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: var(--Persian-red);
+}
+
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  color: var(--Eerie-black, #1D1D1D);
+  font-family: Montserrat;
+  font-size: var(--Main-title-mx);
+  /* font-style: normal; */
+  font-weight: 400;
+  line-height: normal;
+  text-align: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+h2 {
+  color: var(--Eerie-black, #1D1D1D);
+  font-family: Montserrat;
+  font-size: var(--Main-subtitle-mx);
+  /* font-style: normal; */
+  font-weight: 600;
+  line-height: normal;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+h3 {
+  color: var(--Eerie-black, #1D1D1D);
+  font-family: Montserrat;
+  font-size: var(--Subtitle-mx);
+  /* font-style: normal; */
+  font-weight: 300;
+  line-height: normal;
+}
+
+section {
+  margin: 6.31rem auto;
+}
+
+.light {
+  font-weight: 300;
+}
+
+.regular {
+  font-style: normal;
+}
+
+.semi-bold {
+  font-weight: 600;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.bk-w {
+  background-color: var(--White-bk);
+  transition: all .3s ease-in-out;
+  /* border-radius: var(--Round); */
+  /* border: 2px solid var(--Eerie-black, #1D1D1D); */
+  /* padding: 1rem 2rem; */
+  /* width: fit-content;
+  margin: 0 auto; */
+}
+
+.cta {
+  background-color: var(--Eerie-black);
+}
+
+.cta .url {
+  color: var(--White-bk);
 }
