--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -21,13 +21,14 @@ nav {
 
 .navbar-btn:nth-child(2n) {
     border: 2px solid var(--Eerie-black);
+    color: var(--Eerie-black);
     /* display: flex;
     align-items: center; */
 }
 
-.navbar-btn:nth-child(2n) .btn-down{
+/* .navbar-btn:nth-child(2n) .btn-down{
     margin-right: 12px;
-}
+} */
 
 .navbar-btn:nth-child(2n):hover{
     background: var(--Mikado-yellow, #FAC014);
