--| Update FormContact section |--

--- a/src/index.css
+++ b/src/index.css
@@ -97,15 +97,14 @@ h3 {
 section {
   margin: 6.31rem 5.2rem;
 }
-/* section > h1 {
-  margin-bottom: 2.37rem;
-} */
 
-section > h3 {
+section > h3,
+section > h1 {
   text-align: center;
   width: 78.6875rem;
   margin: 2.37rem auto 5.25rem auto;
 }
+
 
 button, a {
   color: var(--Eerie-black);
@@ -165,6 +164,10 @@ button, a {
   flex-wrap: wrap;
 }
 
+.footer-container{
+  margin-bottom: 0rem;
+}
+
 
 @media (max-width: 1328px) {
   :root {
@@ -184,6 +187,9 @@ button, a {
   }
   section > h3 {
     text-align: left;
+    width: auto;
+  }
+  section > h1{
     width: auto;
   }
 }
@@ -206,5 +212,8 @@ button, a {
   }
   section{
     margin: 3.5rem;
+  }
+  section > h1 {
+    text-align: left;
   }
 }
