--- a/src/components/Card_2/Card_2.css
+++ b/src/components/Card_2/Card_2.css
@@ -8,7 +8,7 @@
 .card-project>img {
     width: 100%;
     height: 18.0625rem;
-    border-radius: 16px 16px 0 0;
+    border-radius: 13px 13px 0 0;
     object-fit: cover;
 }
 
@@ -29,6 +29,7 @@
 
 .card-title-container a {
     padding: 0.625rem 1.25rem;
+    min-width: max-content;
 }
 
 .card-title-container a:hover {
