--- a/src/components/Formcontact/FormContact.css
+++ b/src/components/Formcontact/FormContact.css
@@ -1,4 +1,4 @@
-form{
+form {
     display: flex;
     flex-direction: column;
     width: 41.375rem;
@@ -7,26 +7,56 @@ form{
 }
 
 form input,
-form textarea, 
-form button{
+form textarea,
+form button {
     padding: 1rem 2rem;
 }
 
-form input{
+form input {
     margin-bottom: 1.5rem;
 }
 
-form button{
+form button {
     margin: 2rem 0rem;
     color: var(--White-bk);
     cursor: pointer;
 }
 
-form button:hover{
-    background: var(--Caribbean-current, #00798C);  
+form button:hover {
+    background: var(--Caribbean-current, #00798C);
 }
 
-@media (max-width: 960px){
+@keyframes circle-in-hesitate {
+    0% {
+        clip-path: circle(0%);
+    }
+
+    40% {
+        clip-path: circle(40%);
+    }
+
+    100% {
+        clip-path: circle(125%);
+    }
+}
+
+form {
+    view-timeline-name: --card;
+    view-timeline-axis: block;
+
+    animation-timeline: --card;
+    animation-name: circle-in-hesitate;
+
+    animation-range: entry 25% cover 60%;
+    animation-fill-mode: both;
+
+}
+
+/* [transition-style="in:circle:hesitate"] {
+    animation: 2.5s cubic-bezier(.25, 1, .30, 1) circle-in-hesitate both;
+  } */
+
+@media (max-width: 960px) {
     form {
         width: 100%;
     }
